fixing card height on mobile

--- a/css/owner.css
+++ b/css/owner.css
@@ -421,7 +421,7 @@
                         display: grid;
                         position: relative;
                         grid-template-columns: 100%;
-                        grid-template-rows: 400px 100px 70px;
+                        grid-template-rows: 400px 150px 70px;
                         grid-template-areas: "image""text""stats";
                         border-radius: 5px;
                         background: #15141B;
